ACVT003 - Fix an issue occuring on smaller mobile devices

--- a/frontend/activate-interview-project/src/index.css
+++ b/frontend/activate-interview-project/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Enable horizontal scrolling for the table */
+.table-container {
+  overflow-x: auto; 
+}
+
+@media (max-width: 600px) {
+
+  /* Prevent wrapping of table content */
+  th, td {
+    white-space: nowrap;
+  }
+}
